# code

./: 1223.c  123.c  321.c  Ceshi  Key  Key.pub  README.md  agent_info  github  heello.c  optoc  optoc.pub  ssh_add.sh
123/: 124.c
FOC_Simulink/: BR2804_1700Kv.m  PMSM_FOC_CLOOP.slx  PMSM_FOC_CLOOP.slxc  PMSM_FOC_SPEEDCUEEENTLOOP.slx  PMSM_FOC_SPEEDCUEEENTLOOP.slxc  demo_01.slx
FOC_Simulink/FOC_Simulink/: BR2804_1700Kv.m  PMSM_FOC_CLOOP.slx  PMSM_FOC_CLOOP.slxc  PMSM_FOC_SPEEDCUEEENTLOOP.slxc
FOC_Simulink/FOC_Simulink/slprj/sim/varcache/PMSM_FOC_CLOOP/: checksumOfCache.mat  varInfo.mat
FOC_Simulink/FOC_Simulink/slprj/sim/varcache/PMSM_FOC_CLOOP/tmwinternal/: simulink_cache.xml
FOC_Simulink/FOC_Simulink/slprj/sim/varcache/PMSM_FOC_SPEEDCUEEENTLOOP/: checksumOfCache.mat  varInfo.mat
FOC_Simulink/FOC_Simulink/slprj/sim/varcache/PMSM_FOC_SPEEDCUEEENTLOOP/tmwinternal/: simulink_cache.xml
FOC_Simulink/slprj/_jitprj/: 0aZ2ecjtmqDm6XXKbOAKrB.l  0aZ2ecjtmqDm6XXKbOAKrB.mat  2vuIjb9tEUfVbMUg2DNTsE.l  2vuIjb9tEUfVbMUg2DNTsE.mat  55JmF94wOC7ykLksgXqDTE.l  55JmF94wOC7ykLksgXqDTE.mat  6avhmsEXHG4SlE0KJLugM.mat  92pyEZa1pvxgTbpOeJpLEE.l  92pyEZa1pvxgTbpOeJpLEE.mat  Bme49slgXf4kGiAKRuQ6GB.l  Bme49slgXf4kGiAKRuQ6GB.mat  Oqq0IaSQ8FfU51APRgSFOH.l  Oqq0IaSQ8FfU51APRgSFOH.mat  PEZPLulj4EqbF5wM461A6C.l  PEZPLulj4EqbF5wM461A6C.mat  S1rV8tvGIYDr6B7QaMnl2G.l  S1rV8tvGIYDr6B7QaMnl2G.mat  SjbeUoKEKPjjYOHJO7prkE.l  SjbeUoKEKPjjYOHJO7prkE.mat  dLXj5NxzMxfS6QuSQiZ2bE.l  dLXj5NxzMxfS6QuSQiZ2bE.mat  erHHabkCVuV8eogkBgobJH.l  erHHabkCVuV8eogkBgobJH.mat  jitEngineAccessInfo.mat  nYbwhg02S5d4NACu3hAdMD.l  nYbwhg02S5d4NACu3hAdMD.mat  nqIesr99uhtQcj9JmBpXbC.l  nqIesr99uhtQcj9JmBpXbC.mat  tvqVadoOmibmAXIswxI4sF.l  tvqVadoOmibmAXIswxI4sF.mat  xRo7d4YL7NnZiXiAcvkdWH.l  xRo7d4YL7NnZiXiAcvkdWH.mat  xcaeumxieMFKNtfoqaUp0E.l  xcaeumxieMFKNtfoqaUp0E.mat  xtYghlbPePVZzeUXEteaZH.l  xtYghlbPePVZzeUXEteaZH.mat  zb9IrGmfD9W0uZ8v5WWAZF.l  zb9IrGmfD9W0uZ8v5WWAZF.mat
FOC_Simulink/slprj/sim/varcache/PMSM_FOC_CLOOP/: checksumOfCache.mat  varInfo.mat
FOC_Simulink/slprj/sim/varcache/PMSM_FOC_CLOOP/tmwinternal/: simulink_cache.xml
FOC_Simulink/slprj/sim/varcache/PMSM_FOC_SPEEDCUEEENTLOOP/: checksumOfCache.mat  varInfo.mat
FOC_Simulink/slprj/sim/varcache/PMSM_FOC_SPEEDCUEEENTLOOP/tmwinternal/: simulink_cache.xml
IMU/: compass_cal.m
Linux_demo/: Client.cpp
Mag-ekf/: ResultCompare.m  compass2.xlsx  compass_cal.m  ekf_mag_cali.asv  ekf_mag_cali.c  ekf_mag_cali.mexw64  ekf_mag_cali1.c  f_Mag_Ellipsoid_Fit.m  fun_MagCal_EKF.m  matrix_normal.m
Test/: CMakeLists.txt  Cmake.txt
Test/Test_code/inc/: ergodic.h
Test/Test_code/src/: c  c.c  ceshi  ceshi.c  ergodic  ergodic.c  ergodic_old.c  thread  thread.cpp
Test/code/inc/: demo_02.h  demo_03.h  fuse_fun.h  open_txt.h  pr.h
Test/code/src/: demo_01.cpp  demo_02.cpp  demo_03.cpp  ergodic_old.c  fuse_fun  fuse_fun.c  fuse_test.c  main.c  main.cpp  open_txt.cpp  passthrough_fh.c  pr.c  pr.cpp
Test/text/: file.txt
Thread/: CMakeLists.txt  README.md
Thread/inc/: debug_log.h  demo_03.h  ergodic.h  log.h
Thread/src/: demo_03.cpp  demo_04.cpp  demo_05.cpp  demo_er.cpp  ergodic.c  ergodic_old.c  log.c
socket/: CMakeLists.txt  README.md
socket/src/: Client.cpp  Client_file.cpp  Client_txt.cpp  Server.cpp  Server_file.cpp  Server_txt.cpp
socket/src_lib/: zip2.cpp
socket_demo/: CMakeLists.txt
socket_demo/src/: Client_txt.cpp  Server_txt.cpp
